--- a/PdfCreator/app/src/main/res/layout/activity_main.xml
+++ b/PdfCreator/app/src/main/res/layout/activity_main.xml
@@ -5,12 +5,13 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp"
+    android:id="@+id/mainPageRelativeLayout"
     android:background="@drawable/blue_border"
     android:layout_margin="20dp"
     tools:context=".MainActivity">
 
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_margin="20dp"
@@ -50,6 +51,9 @@
         android:layout_centerHorizontal="true"
         android:layout_below="@id/convertImageButton"
         android:text="View PDF" />
+
+
     </LinearLayout>
+
 
 </RelativeLayout>
