--- a/PdfCreator/app/src/main/res/layout/item_layout.xml
+++ b/PdfCreator/app/src/main/res/layout/item_layout.xml
@@ -1,15 +1,13 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:layout_height="match_parent"
+    android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/imageViewItem"
         android:layout_width="110dp"
-        android:layout_height="110dp"
-        android:layout_marginTop="5dp"
-        android:background="@drawable/blue_border"
+        android:layout_height="match_parent"
         android:scaleType="centerCrop"
         android:layout_marginRight="2dp"
         android:src="@android:drawable/ic_menu_gallery"/>
